fix controls visibility when burger menu opened in nc page

--- a/northern-cyprus.css
+++ b/northern-cyprus.css
@@ -22,7 +22,7 @@
     left: 0;
     justify-content: space-between;
     width: 100%;
-    z-index: 99999;
+    z-index: 1;
     transition: all ease 0.5s;
 }
 
